<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Schaatser Scherm</string>
    <string name="hello_world">Hallo Wereld!</string>
    <string name="menu_settings">Instellingen</string>
    <string name="title_activity_skater_view">SchaatserOverzicht</string>
    <string name="totalTimeDefault">0:00.00</string>
    <string name="roundNumberDefault">Ronde 0</string>
    <string name="roundNumberIdentifier">Ronde: </string>
    <string name="placeholder">Vul een naam in: </string>
    <string name="saveEntrySchedule">Sla het rooster op</string>
    <string name="distance">Afstand</string>
    <string name="distanceDefault">0m</string>
    <string name="differenceDefault">+ 0:00.00</string>
    <string name="roundTimeDefault">00.0</string>
    <string name="title_activity_main">MainActiviteit</string>
    <string name="title_activity_skater_over_view">SchaatserOverzicht</string>
    <string name="menu_selectall">Schema</string>
    <string name="title_activity_schedule">RoosterActiviteit</string>
	<string name="menu_change">Wijzig view</string>
	<string name="totalDifferenceLabel">Totaalverschil</string>
    <string name="roundDifferenceLabel">Rondeverschil</string>
    <string name="totalTimeLabel">Totaaltijd</string>
    <string name="roundTimeLabel">Rondetijd</string>
    <string name="roundNumberLabel">Rondenummer</string>
    <string name="distanceLabel">Afstand</string>
    <string name="laneLabel">Baan</string>  	
    <string name="textLeftUpChange">Linksboven</string>
    <string name="textLeftBottomChange">Linksonder</string>
    <string name="textRightBottomChange">Rechtsonder</string>
    <string name="opponent">Schema: </string>
    <string name="currentOpponent">Huidige tegenstander</string>
	<string-array name="viewItems">
        <item>Totaalverschil</item>
        <item>Rondeverschil</item>
        <item>Totaaltijd</item>
        <item>Rondetijd</item>
        <item>Rondenummer</item>
        <item>Afstand</item>
        <item>Baan</item>       
    </string-array>
</resources>