<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1"
    
    android:orientation="horizontal" >
    
    <TextView
        android:id="@+id/textLeftUpChange"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/textLeftUpChange" />

    <Spinner
        android:id="@+id/leftUpSpinner"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:entries="@array/viewItems"
        android:prompt="@string/menu_change" />

    </LinearLayout>
	
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1"
    android:orientation="horizontal" >
    
    <TextView
               android:id="@+id/textLeftBottomChange"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               android:layout_weight="1"
               android:gravity="center"
               android:text="@string/textLeftBottomChange"/>

	<Spinner
        android:id="@+id/leftBottomSpinner"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:entries="@array/viewItems"
        android:prompt="@string/menu_change" />
</LinearLayout>

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1"
    android:orientation="horizontal" >
    
    <TextView
               android:id="@+id/textRightBottomChange"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               android:layout_weight="1"
               android:gravity="center"
               android:text="@string/textRightBottomChange"/>
	
    <Spinner
        android:id="@+id/rightBottomSpinner"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:entries="@array/viewItems"
        android:prompt="@string/menu_change" />
</LinearLayout>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1"
    android:orientation="horizontal" >
    
 <Button
     android:id="@+id/changeViewButton"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:layout_weight="1"
     android:text="Opslaan" />

</LinearLayout>
</LinearLayout>