<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_height="fill_parent" android:layout_width="fill_parent">
  <LinearLayout android:layout_weight="1" android:layout_height="fill_parent" android:layout_width="fill_parent">

        <TextView
          android:id="@+id/leftUpText"
          android:layout_width="fill_parent"
          android:layout_height="fill_parent"
          android:layout_weight="1"
          android:gravity="center"
          android:text=""
          android:textSize="@dimen/SkaterViewBig"
          android:textStyle="bold"
          android:visibility="gone" />
        
        <ImageView
          android:id="@+id/leftUpImage"
          android:layout_width="fill_parent"
          android:layout_height="fill_parent"
          android:layout_weight="1"
          android:gravity="center" />      
      <LinearLayout
          android:layout_width="fill_parent"
          android:layout_height="fill_parent"
          android:layout_weight="1"
          android:orientation="vertical" >
	
           <TextView
               android:id="@+id/totalTime"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               android:layout_weight="1"
               android:gravity="center"
               android:text="@string/totalTimeDefault"
               android:textSize="@dimen/SkaterViewSmall" />
            
            <TextView
                android:id="@+id/roundNumber"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/roundNumberDefault"
                android:textSize="@dimen/SkaterViewSmall" />
            
            <TextView
                android:id="@+id/distance"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/distanceDefault"
                android:textSize="@dimen/SkaterViewSmall" />

      </LinearLayout>
      
      </LinearLayout>
  <LinearLayout android:layout_weight="1" android:layout_height="fill_parent" android:layout_width="fill_parent">

      <TextView
          android:id="@+id/leftBottomText"
          android:layout_width="fill_parent"
          android:layout_height="fill_parent"
          android:layout_weight="1"
          android:gravity="center"
          android:text=""
          android:textSize="@dimen/SkaterViewBig"
          android:textStyle="bold" />
      
      <ImageView
          android:id="@+id/leftBottomImage"
          android:layout_width="fill_parent"
          android:layout_height="fill_parent"
          android:layout_weight="1"
          android:gravity="center"
          android:visibility="gone" />
      
      <TextView
          android:id="@+id/rightBottomText"
          android:layout_width="fill_parent"
          android:layout_height="fill_parent"
          android:layout_weight="1"
          android:gravity="center"
          android:text=""
          android:textSize="@dimen/SkaterViewBig"
          android:textStyle="bold" />
      
      <ImageView
          android:id="@+id/rightBottomImage"
          android:layout_width="fill_parent"
          android:layout_height="fill_parent"
          android:layout_weight="1"
          android:gravity="center"
          android:visibility="gone" />
      
      </LinearLayout>
</LinearLayout>